--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     font-family: 'Happy Monkey';
 }
 
+body {
+    position: relative;
+    left: 300px;
+}
+
 .container {
     width: 800px;
     padding-left: 50px;
